--- a/filter.css
+++ b/filter.css
@@ -14,7 +14,7 @@ select {
     padding: 8px;
     font-size: 16px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #303841;
 }
 
 
@@ -49,7 +49,7 @@ button:hover {
     padding: 10px;
     width: 200px;
     text-align: center;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
 .movie-card img {
@@ -60,9 +60,11 @@ button:hover {
 .movie-card h3 {
     font-size: 16px;
     margin: 10px 0 5px 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .movie-card p {
     font-size: 14px;
     margin: 5px 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
